--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-                  ee<li classa"active"><a hrefa"#">Home</a></li/
-    <li><a href="<a href="/rango/about">About</a></li>
+            <li><a class="active"><a href="/rango/">Home</a></li>
+            <li><a href="/rango/about/">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
