added image dir, rango picture

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a class="active"><a href="/rango/">Home</a></li>
-            <li><a href="/rango/about/">About</a></li>
+            <li><a class="active"><a href="/about/">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
