added pictures to each page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,6 @@
-<h1> Rango says here is the about page </h1i>
-    <br> </br>
+{% load staticfiles %}
+
+<h1> This is what Rango is about </h1>
 <a href="/rango/">Home</a>
+<br> </br>
+<img src="{% static "images/rango2.jpg" %}" />
