--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,9 @@
+{% load staticfiles %}
+
 <h1> Created by heckles </h1>
-<br> </br>
-<body> heckles83@gmail.com </body>
+<h2> heckles83@gmail.com </h2>
 <br> </br>
 <a href="/rango/">Home</a>
+<br></br>
+<img src="{% static "images/snake.jpg" %}" alt="Picture of rango" />
 
