--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-
+  <img src="{% static "images/rango6.jpg" %}" /> 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
