--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -13,13 +13,14 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css", rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"-->
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/bootstrap/starter-template.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/starter-template/starter-template.css", rel="stylesheet">
+    <!--link href="/static/css/bootstrap/starter-template.css" rel="stylesheet"-->
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
