added categories to homepage

--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -59,9 +59,20 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
+        <h1>Rango App</h1>
+        <p class="lead">Rango's doin the fandango..<br>And it brings results! </p>
+
+        <ul>
+     
+     
+         
+            </ul>
+
+
+
+
+    <a href="/rango/">Home</a>
+    </div>
 
     </div><!-- /.container -->
 
