category links from homepage still mysteriously do not work, other tinkering done

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
 <h1> This is what Rango is about </h1>
-<a href="/rango/">Home</a>
+<a href="/">Home</a>
 <br> </br>
 <img src="{% static "images/rango2.jpg" %}" />
