--- a/templates/category.html
+++ b/templates/category.html
@@ -17,7 +17,7 @@
                 <strong>No pages currently in category.</strong>
             {% endif %}
         {% else %}
-            The specified category {{ category_name  }} does not exits!
+            The specified category {{ category_name  }} does not exist!
         {% endif %}
     </body>
 </html>
