--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 <h1> Created by heckles </h1>
 <h2> heckles83@gmail.com </h2>
 <br> </br>
-<a href="/rango/">Home</a>
+<a href="/">Home</a>
 <br></br>
 <img src="{% static "images/snake.jpg" %}" alt="Picture of rango" />
 
