--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         {% if categories %}
             <ul>
                 {% for category in categories %}
-                <li><a href="/category/{{ category.slug }}">{{ category.name }}</a></li>
+                <li><a href="/rango_app/category/{{ category.slug }}">{{ category.name }}</a></li>
                 {% endfor %}
             </ul>
         {% else %}
