Bootstrap and static files init.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,9 @@
+{% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block content %}
 <h1> This is what Rango is about </h1>
 <a href="/">Home</a>
 <br> </br>
-<img src="{% static "images/rango2.jpg" %}" />
+<img src="{% static 'images/rango2.jpg' %}" />
+{% endblock %}
