--- a/rango_app/templates/category.html
+++ b/rango_app/templates/category.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'base.html' %}
 
-    <body>
+{% block content %}
         <h1>{{ category_name }}</h1>
         {% if category %}
             {% if pages %}
             <ul>
-                {% for pages in pages %} 
+                {% for page in pages %} 
                 <li><a href="{{ page.url }}">{{ page.title }}</a>
                 {% endfor %}
             </ul>
@@ -19,5 +15,4 @@
         {% else %}
             The specified category {{ category_name  }} does not exist!
         {% endif %}
-    </body>
-</html>
+{% endblock %}
