--- a/rango_app/templates/add_category.html
+++ b/rango_app/templates/add_category.html
@@ -9,7 +9,7 @@
 
         <form id="category_form" method="post" action="/rango_app/add_category/">
 
-            {% csrf token %}
+            {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
             {% endfor %}
