--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
+    
+   <h2> <a href="/rango_app/add_category/">Add a New Category</a><br /></h2>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
           <h4> Number of views </h4>
                 {% for category in categories %}
