added link on category.html

--- a/rango_app/templates/category.html
+++ b/rango_app/templates/category.html
@@ -15,4 +15,7 @@
         {% else %}
             The specified category {{ category_name  }} does not exist!
         {% endif %}
+
+        <h3> <a href="/rango_app/category/<category_name_url>/add_page/">Add Page</a></h3>
 {% endblock %}
+
