--- a/rango_app/templates/add_category.html
+++ b/rango_app/templates/add_category.html
@@ -1,14 +1,7 @@
+{% extends 'base.html' %}
 
-<br>
 
-
-</br>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% block content %}
         <h1>Add a Category</h1>
 
         <form id="category_form" method="post" action="/rango_app/add_category/">
@@ -26,6 +19,5 @@
 
             <input type="submit" name="submit" value="Create Category" />
         </form>
-    </body>
 
-</html>
+{% endblock %}
