--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
         {% endif %}
     
    <h2> <a href="/rango_app/add_category/">Add a New Category</a><br /></h2>
+   <h3> <a href="/rango_app/register/">Register Here</a><br /><h3>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
           <h4> Number of views </h4>
                 {% for category in categories %}
