--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,13 @@
 {% block content %}
 
       <div class="starter-template">
+        
         {% if user.is_authenticated %}
-        <h1>Rango says... hello {{ user.username }}!</h1>
+            <h1>Rango says... hello {{ user.username }}!</h1>
         {% else %}
-        <h1>Rango says... hello to the unlogged in masses!!</h1>
+            <h1>Rango says... hello to the unlogged in masses!!</h1>
         {% endif %}
-        <p class="lead">Welcome to my Rango page!! He sure looks ready to tango!</p>
+      <p class="lead">Welcome to my Rango page!! He sure looks ready to tango!</p>
         {% if categories %}
             <ul>
                 {% for category in categories %}
@@ -18,10 +19,15 @@
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
-    
-   <h2> <a href="/rango_app/add_category/">Add a New Category</a><br /></h2>
-   <h3> <a href="/rango_app/register/">Register Here</a><br /></h3>
-   <h4> <a href="/rango_app/user_login/">Login</a><br /></h4>     
+   
+    {% if user.is_authenticated %} 
+    <a href="/rango_app/restricted/">Restricted Page</a><br />
+    <a href="/rango_app/logout/">Logout</a><br />
+    {% else %} 
+    <h3> <a href="/rango_app/register/">Register Here</a><br /></h3>
+    <h4> <a href="/rango_app/user_login/">Login</a><br /></h4>     
+    {% endif %}
+    <h2> <a href="/rango_app/add_category/">Add a New Category</a><br /></h2>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
           <h4> Number of views </h4>
                 {% for category in categories %}
