--- a/templates/index.html
+++ b/templates/index.html
@@ -14,20 +14,20 @@
         {% if categories %}
             <ul>
                 {% for category in categories %}
-                <li><a href="/rango_app/category/{{ category.slug }}">{{ category.name }}</a></li>
+                <li><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
                 {% endfor %}
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
    
     {% if user.is_authenticated %} 
-    <a href="/rango_app/restricted/">Restricted Page</a><br />
-    <a href="/rango_app/logout/">Logout</a><br />
+    <a href="{% url 'restricted' %}">Restricted Page</a><br />
+    <a href="{% url 'logout' %}">Logout</a><br />
     {% else %} 
-    <h3> <a href="/rango_app/register/">Register Here</a><br /></h3>
-    <h4> <a href="/rango_app/user_login/">Login</a><br /></h4>     
+    <h2> <a href="{% url 'user_login' %}">Login</a><br /></h2>     
+    <h3> <a href="{% url 'register' %}">Register Here</a><br /></h3>
     {% endif %}
-    <h2> <a href="/rango_app/add_category/">Add a New Category</a><br /></h2>
+    <h3> <a href="{% url 'add_category' %}">Add a New Category</a><br /></h3>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
           <h4> Number of views </h4>
                 {% for category in categories %}
