--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <!-- All templates that extend base.html get all of this css and <html> and <head> because they extend it...thats the point.-->
 
     <title> 
-    {% block title %} Main page title!!! {% endblock %}
+    {% block title %} Rango {% endblock %}
     </title>
     <link href="{% static 'css/bootstrap/bootstrap.min.css' %}"
           rel="stylesheet" media="screen">
@@ -23,7 +23,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">Rango</a>
+
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
