--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,62 @@
-        {% extends 'base.html' %}
+{% extends 'base.html' %}
+
 {% load staticfiles %}
+
+
+{% block title %}Rango Home {% endblock %}
+
 
 {% block content %}
 
-      <div class="starter-template">
-        
-        {% if user.is_authenticated %}
-            <h1>Rango says... hello {{ user.username }}!</h1>
-        {% else %}
-            <h1>Rango says... hello to the unlogged in masses!!</h1>
-        {% endif %}
-      <p class="lead">Welcome to my Rango page!! He sure looks ready to tango!</p>
-        {% if categories %}
-            <ul>
-                {% for category in categories %}
-                <li><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
-                {% endfor %}
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
-   
-    {% if user.is_authenticated %} 
-    <a href="{% url 'restricted' %}">Restricted Page</a><br />
-    <h2> <a href="{% url 'logout' %}">Logout</a><br /></h2>
-    {% else %} 
-    <h2> <a href="{% url 'user_login' %}">Login</a><br /></h2>     
-    <h3> <a href="{% url 'register' %}">Register Here</a><br /></h3>
-    {% endif %}
-    <h3> <a href="{% url 'add_category' %}">Add a New Category</a><br /></h3>
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
-          <h4> Number of views </h4>
-                {% for category in categories %}
-                <li> {{ category.slug }} {{ category.views }} </li>
-                {% endfor %}
-            </ul>
-     </div>
+<div class="page-header">
 
+{% if user.is_authenticated %}
+
+   <h1>Rango says... hello {{ user.username }}!</h1>
+
+{% else %}
+
+  <h1>Rango says... hello to the unlogged in masses!!</h1>
+
+{% endif %}
+
+</div>
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Categories</h3>
+    </div>
+  </div>
+
+{% if categories %}
+  <ul class="list-group">
+    {% for category in categories %}
+      <li class="list-group-item"><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
+    {% endfor %}
+  </ul>
+
+{% else %}
+
+  <strong>There are no categories present.</strong>
+
+{% endif %}
+
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Pages</h3> 
+  </div>
+</div>
+
+{% if pages %}
+  <ul class="list-group">
+    {% for page in pages %}
+      <li class="list-group-item"><a href="{{page.url}}">{{ page.title }}</a></li>
+    {% endfor %}
+  </ul>
+{% else %}
+
+  <strong>There are no categories present.</strong>
+
+{% endif %}
+
+<p> visits: {{ visits }}</p>
 {% endblock %}
