--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 
     <html>
     <head>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">(...)
+    </head>
 <!-- All templates that extend base.html get all of this css and <html> and <head> because they extend it...thats the point.-->
 
     <title> 
@@ -26,15 +28,28 @@
               <a class="navbar-brand" href="#">Rango</a>
 
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about/">About</a></li>
                 <li><a href="/contact/">Contact</a></li>
               </ul>
+              <ul id="navbar" class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li class="nav navbar-nav text">Welcome, {{ user.username }}!</li>
+                <li><a href="/rango_app/profile/">Profile</li>
+                <li><a href="/rango_app/logout">Logout</li>
+                    {% else %}
+
+                <li><a href="/rango_app/register/"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+                <li><a href="/rango_app/user_login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+
+                {% endif %}
+              </ul>   
             </div><!--/.nav-collapse -->
           </div>
-        </nav>
+       
+ </nav>
 
       <div class="container"> 
 
