--- a/rango_app/templates/register.html
+++ b/rango_app/templates/register.html
@@ -2,22 +2,30 @@
 
 {% block content %}
 
-    <h1>Register with Rango</h1>
-    
-    {% if registered %}
-    Rango says: <strong>thank you for registering!</strong>
-    <a href="/">Return to homepage.</a><br />
-    {% else %}
-    Rango says: <strong>register here!!</strong><br />
-    
-   <form id="user_form" method="post" action="/rango_app/register/"
-        enctype="multipart/form-data">
-        
-        {% csrf_token %} 
-        {{ user_form.as_p }}
-        {{ profile_form.as_p }}
+<form role="form" method="post" action=".">
+                {% csrf_token %}
 
-        <input type="submit" name="submit" value="Register" />
-    </form>
-    {% endif %}
+<h2 class="form-signin-heading">Sign Up Here</h2>
+
+<div class="form-group">
+ <p class="required"><label for="id_username">Username:</label>
+    <input class="form-control" id="id_username" maxlength="30" name="username" type="text" placeholder="Enter username"/></p>
+</div>
+ <div class="form-group">
+ <p class="required"><label for="id_email">E-mail:</label> 
+    <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
+</div>
+<div class="form-group">
+ <p class="required"><label for="id_password1">Password:</label>
+    <input class="form-control" id="id_password1" name="password1" type="password" placeholder="Enter password" /></p>
+    
+</div>
+<div class="form-group">
+ <p class="required"><label for="id_password2">Password (again):</label> 
+    <input class="form-control" id="id_password2" name="password2" type="password" placeholder="Enter password again" /></p>
+</div>
+
+<button type="submit" class="btn btn-default">Submit</button>
+
+        </form>
 {% endblock %}
